2007-04-24  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* po/POTFILES.in:
	Remove file that no longer exists.

2007-04-24  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/effects/volume/volume.py (Volume):
	volume effect does volume setting for all known components
	that use it.

2007-04-24  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/producers/soundcard/soundcard.py
	  (Soundcard.get_pipeline_string):
	FIXME was fixed last week.

2007-04-24  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/worker/checks/Makefile.am:
	* flumotion/worker/checks/package.xml:
	* flumotion/worker/checks/video.py:
	* flumotion/worker/checks/audio.py:
	Move checkMixerTracks to audio.py.
	* flumotion/worker/checks/video010.py:
	* flumotion/worker/checks/gst010.py:
	Rename video010.py to gst010.py.

2007-04-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/main.py (main): More use of PBConnectionInfo.

	* flumotion/worker/feed.py: Remove server-related code; client
	code has to stay here, because components call it.

	* flumotion/worker/medium.py: Factored out of worker.py,
	dispatches all requests to the worker brain.

	* flumotion/worker/feedserver.py (FeedServer): Server code
	factored out of flumotion.worker.feed. Synthesized a server object
	to be the calling-point for feedserver-related operations.
	(FeedAvatar.__init__): Take the mind directly instead of in
	attached. Fixes #566. Use the fpb.Avatar infrastructure for
	callremote, which gives us free logging. Remove use of crack
	IFeedServerParent.

	* flumotion/worker/job.py: Consolidate classes such that the
	JobHeaven object acts as the one calling-point for job-related
	functions. Factor the deferredstart code out into a separate
	testable class. Attach mind to job components directly instead of
	via a callLater; see #566.
	(JobInfo): Renamed from "Kid".
	(JobHeaven.spawn): Renamed from Kindergarten.play.